Added ProblemsFacade js API. Fixed delete methods in ProblemsService
Signed-off-by: Boris Nenchovski <bobinen@gmail.com>

--- a/ide/ui/ide-problems/src/main/resources/META-INF/dirigible/ide-problems/view/problems.html
+++ b/ide/ui/ide-problems/src/main/resources/META-INF/dirigible/ide-problems/view/problems.html
@@ -70,6 +70,7 @@
                 <th>Line</th>
                 <th>Column</th>
                 <th>Symbol</th>
+                <th>Expected</th>
                 <th>Created</th>
                 <th>Creator</th>
                 <th>Category</th>
@@ -86,6 +87,7 @@
                 <td><div class="tdSingleLine">{{next.line}}</div></td>
                 <td><div class="tdSingleLine">{{next.column}}</div></td>
                 <td><div class="tdSingleLine">{{next.symbol}}</div></td>
+                <td><div class="tdSingleLine">{{next.expected}}</div></td>
                 <td><div class="tdSingleLine">{{next.createdAt}}</div></td>
                 <td><div class="tdSingleLine">{{next.createdBy}}</div></td>
                 <td><div class="tdSingleLine">{{next.category}}</div></td>
