Added image view
Signed-off-by: StanZGenchev <stanislav.genchev@sap.com>

--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/ide.css
@@ -697,6 +697,24 @@ a.ui-button:active,
 .bg-default {
   background-color: #f5f5f5;
 }
+.checkered {
+  background-image:
+    linear-gradient(45deg, #d4d3d3 25%, transparent 25%),
+    linear-gradient(135deg, #d4d3d3 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, #d4d3d3 75%),
+    linear-gradient(135deg, transparent 75%, #d4d3d3 75%);
+  background-size: 16px 16px;
+  background-position: 0 0, 8px 0, 8px -8px, 0px 8px;
+}
+.contain-image {
+  object-fit: contain;
+  margin: auto;
+}
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 /* JSTree fixes */
 .jstree-default > .jstree-striped {
