--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/dropdown.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/dropdown.css
@@ -23,6 +23,16 @@
     display: block;
     cursor: pointer;
 }
+.dropdown-btn {
+    border: none;
+    background: none;
+    margin: none;
+    outline: none;
+    width: 100%;
+    text-align: left;
+    padding: 8px 12px 8px 12px;
+    font-size: 12px;
+}
 .dropdown-container .dropdown-item:hover {
     background-color: #f2f2f2;
 }
