--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/dropdown.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/dropdown.css
@@ -25,13 +25,16 @@
 }
 .dropdown-btn {
     border: none;
-    background: none;
+    background-color: transparent;
     margin: none;
     outline: none;
     width: 100%;
     text-align: left;
-    padding: 8px 12px 8px 12px;
+    padding: 12px 16px;
     font-size: 12px;
+}
+.fa_margin{
+    margin: 0 12px 0 0
 }
 .dropdown-container .dropdown-item:hover {
     background-color: #f2f2f2;
