--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/dropdown.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/dropdown.css
@@ -30,11 +30,11 @@
     outline: none;
     width: 100%;
     text-align: left;
-    padding: 12px 16px;
+    padding: 12px 14px;
     font-size: 12px;
 }
 .fa_margin{
-    margin: 0 12px 0 0
+    margin: 0px 8px 0px 0px;
 }
 .dropdown-container .dropdown-item:hover {
     background-color: #f2f2f2;
