--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/migration.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/migration.css
@@ -117,6 +117,11 @@ html, body {
 .btn-big {
     padding: 8px 12px;
 }
+.btn-marginLeft {
+    padding: 1px 2px;
+    margin-left: 10px !important;
+}
+
 label {
     margin-top: 14px;
     margin-bottom: 10px;
