--- a/ide/ui/ide-extensions/src/main/resources/META-INF/dirigible/ide-extensions/views/extensions/index.html
+++ b/ide/ui/ide-extensions/src/main/resources/META-INF/dirigible/ide-extensions/views/extensions/index.html
@@ -98,7 +98,7 @@
 
             function loadExtensions() {
                 $http.get(extensionsApi)
-                    .success(function (data) {
+                    .then(function (data) {
                         $scope.extensionPoints = data;
                     });
             }
