--- a/ide/ui/ide-operations/src/main/resources/META-INF/dirigible/ide-operations/views/configurations/index.html
+++ b/ide/ui/ide-operations/src/main/resources/META-INF/dirigible/ide-operations/views/configurations/index.html
@@ -77,7 +77,7 @@
 
                 function loadConfigurations() {
                     $http.get(configurationsApi)
-                        .success(function (data) {
+                        .then(function (data) {
                             $scope.configurations = data;
                         });
                 }
