--- a/ide/ui/ide-plugins/src/main/resources/META-INF/dirigible/ide-plugins/views/plugins/index.html
+++ b/ide/ui/ide-plugins/src/main/resources/META-INF/dirigible/ide-plugins/views/plugins/index.html
@@ -78,11 +78,11 @@
 
             function loadPlugins() {
                 $http.get(pluginsApi)
-                    .success(function (data) {
+                    .then(function (data) {
                         $scope.depots = data;
                         $scope.depots.forEach(function (depot) {
                             $http.get(depot.depot)
-                                .success(function (data) {
+                                .then(function (data) {
                                     depot.plugins = data;
                                 });
                         });
