--- a/ide/ui/ide-extensions/src/main/resources/META-INF/dirigible/ide-extensions/views/extensions/index.html
+++ b/ide/ui/ide-extensions/src/main/resources/META-INF/dirigible/ide-extensions/views/extensions/index.html
@@ -99,7 +99,7 @@
             function loadExtensions() {
                 $http.get(extensionsApi)
                     .then(function (data) {
-                        $scope.extensionPoints = data;
+                        $scope.extensionPoints = data.data;
                     });
             }
 
