--- a/ide/ui/ide-operations/src/main/resources/META-INF/dirigible/ide-operations/views/configurations/index.html
+++ b/ide/ui/ide-operations/src/main/resources/META-INF/dirigible/ide-operations/views/configurations/index.html
@@ -78,7 +78,7 @@
                 function loadConfigurations() {
                     $http.get(configurationsApi)
                         .then(function (data) {
-                            $scope.configurations = data;
+                            $scope.configurations = data.data;
                         });
                 }
 
