--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/ide.css
@@ -85,6 +85,9 @@ body {
 .error-label {
   color: red;
 }
+.warn-label {
+  color: #d7ad2a;
+}
 .statusbar-error {
   color: #ffcebb;
   width: 45%;
