--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/dropdown.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/dropdown.css
@@ -23,6 +23,9 @@
     display: block;
     cursor: pointer;
 }
+.dropdown-item.selected {
+    font-weight: bold;
+}
 .dropdown-btn {
     border: none;
     background-color: transparent;
@@ -43,8 +46,9 @@
     width: 100%;
     text-align: left;
     padding: 8px 12px 8px 12px;
-    font-size: 14px;
+    font-size: 14px;    
 }
+.dropdown-toggle.btn-default { white-space: normal!important;}
 .dropdown-toggle .caret {
     float: right;
     margin: 8px 0;
