--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/migration.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/migration.css
@@ -168,6 +168,10 @@ body {
   border-top: 1px solid #ddd;
   border-radius: 0 0 3px 3px;
 }
+.changes-body .list-group-item .diff-view>p {
+  text-align: center;
+  padding: 24px;
+}
 .changes-body .list-group-item .diff-view .diffOverviewRuler {
   border-bottom-right-radius: 3px;
 }
